------------------------------------------------------------------------
r2084 | gaser | 2022-08-11 17:28:09

Changed paths:
 M CHANGES.txt
 M cat_stat_homogeneity.m


Fixed:  Corrected scaling issues of QM-scores in cat_stat_homogeneity.m.
------------------------------------------------------------------------
r2083 | gaser | 2022-08-11 17:14:46

Changed paths:
 M CHANGES.txt
 M cat_surf_results.m


Fixed:  Corrected selection of slice rows/columns after automatically estimation
        of local maxima in cat_surf_results.m.
------------------------------------------------------------------------
r2082 | gaser | 2022-08-11 16:03:51

Changed paths:
 M CHANGES.txt
 M Makefile
 M cat_surf_results.m
AM cat_vol_glass.m
 M cat_vol_img2mip.m
 M cat_vol_slice_overlay.m
A  glass_brain.mat


Added:   Added new function cat_vol_glass.m to visualize glassbrain using a 
         modified version of spm_glass.
Changed: Modified cat_vol_img2mip.m to support cat_vol_glass.m.
Changed: Added OV to output argument in cat_vol_slice_overlay.m to allow
         to update OV fields such as OV.slices_str.
Changed: Some changes to cat_surf_results.m to consider new functionality.
------------------------------------------------------------------------
r2081 | gaser | 2022-08-11 12:11:50

Changed paths:
 M CHANGES.txt
 M cat12.m
 M cat_surf_results.m
 M cat_vol_img2mip.m
 M cat_vol_slice_overlay.m


Changed: Many more changes to cat_surf_results.m, cat_vol_img2mip.m, 
         cat_vol_slice_overlay.m to provide consistency 
         between all displays.
------------------------------------------------------------------------
r2079 | gaser | 2022-08-10 15:15:09

Changed paths:
 M CHANGES.txt
 M cat_surf_results.m
 M cat_vol_img2mip.m
 M cat_vol_slice_overlay.m
 M slice_overlay.m


Changed: Many more changes to cat_surf_results.m, cat_vol_img2mip.m, 
         cat_vol_slice_overlay.m and slice_overlay.m to provide consistency 
         between all displays.